# mousechd-napari

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: CHANGELOG.md  README.md  issues.md  server_setup.md
mousechd_napari/: __init__.py  _constants.py  _dock_widget.py  _reader.py  _utils.py  _widget.py  napari.yaml  sample_data.py
mousechd_napari/assets/: __init__.py  transturbo.npy
