[metadata]
name = mousechd-napari
version = 0.0.1a9
author = Hoa Nguyen
author_email = ntthoa.uphcm@gmail.com
license = MIT
url = https://github.com/hnguyentt/mousechd-napari
description = A tool for heart segmentation and congenital heart defect detection in mice. 
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/hnguyentt/mousechd-napari/issues
    Documentation = https://github.com/hnguyentt/mousechd-napari#README.md
    Source Code = https://github.com/hnguyentt/mousechd-napari
    User Support = https://github.com/hnguyentt/mousechd-napari/issues

[options]
packages = find:
install_requires = 
    setuptools
    packaging
    mousechd

python_requires = >=3.9
include_package_data = True
package_dir =
    =.

# add your package requirements here

[options.packages.find]
where = .

[options.entry_points]
napari.manifest =
    mousechd-napari = mousechd_napari:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari


[options.package_data]
* = *.yaml